refactoring and reformatting of the entire code of the library was carried out

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "lint": "npx eslint --fix ./"
     },
     "dependencies": {
-        "moment": "^2.29.4"
+        "moment": "^2.29.4",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.19.6",
