--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
         "uuid": "^9.0.0"
     },
     "devDependencies": {
+        "@babel/cli": "^7.19.3",
         "@babel/core": "^7.19.6",
+        "@babel/plugin-proposal-decorators": "^7.20.2",
         "@babel/plugin-transform-runtime": "^7.19.6",
         "@babel/preset-env": "=7.18.10",
         "@babel/register": "^7.18.9",
         "@rollup/plugin-babel": "^6.0.2",
         "@rollup/plugin-commonjs": "^23.0.2",
         "@rollup/plugin-node-resolve": "^15.0.1",
+        "@types/jasmine": "^4.3.0",
         "eslint": "^8.26.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.26.0",
-        "jasmine": "^4.5.0",
+        "jasmine": "^4.2.1",
         "jasmine-console-reporter": "^3.1.0",
         "rollup": "^2.68.0",
         "rollup-plugin-delete": "^2.0.0",
@@ -36,7 +39,6 @@
         "rollup-plugin-terser": "^7.0.2"
     },
     "main": "dist/d-dto.min.js",
-    "type": "module",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/dlabs71/d-dto.git"
