--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "extends": "airbnb-base",
     "overrides": [
     ],
+    "parser": "@babel/eslint-parser",
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
@@ -28,7 +29,15 @@
             {
                 "code": 121
             }
-        ]
+        ],
+        "prefer-destructuring": [
+            "error",
+            {
+                "object": true,
+                "array": false
+            }
+        ],
+        "import/prefer-default-export": 0
     },
     "ignorePatterns": [
         "test",
