--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@babel/plugin-transform-runtime": "^7.19.6",
         "@babel/preset-env": "=7.18.10",
         "@babel/register": "^7.18.9",
+        "@babel/eslint-parser": "^7.19.1",
         "@rollup/plugin-babel": "^6.0.2",
         "@rollup/plugin-commonjs": "^23.0.2",
         "@rollup/plugin-node-resolve": "^15.0.1",
