--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
         "rollup-plugin-node-externals": "^5.0.2",
         "rollup-plugin-terser": "^7.0.2"
     },
-    "main": "dist/d-dto.min.js",
+    "main": "dist/d-dto.umd.min.js",
+    "module": "dist/d-dto.esm.min.js",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/dlabs71/d-dto.git"
