added new parameter - strict, for REST API decorators (GetMapper, etc.). Fixed tests and documentation

--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
         "jsdto",
         "jsmodels",
         "models",
-        "dtomodels"
+        "dtomodels",
+        "rest",
+        "json"
     ],
     "bugs": {
         "url": "https://github.com/dlabs71/d-dto/issues"
